import React from 'react';
import renderer from 'react-test-renderer';
import MovieForm from './MovieForm';
import { MovieMockData } from '../../mocks/data';

describe('Movie form', () => {
  const onSubmit = jest.fn();

  it('should render movie form w/o data with loading button', () => {
    const elem = renderer.create(<MovieForm isLoading={true} onSubmit={onSubmit} />).toJSON();
    expect(elem).toMatchSnapshot();
  });

  it('should render movie form with filled data', () => {
    const elem = renderer.create(<MovieForm movie={MovieMockData} isLoading={false} onSubmit={onSubmit} />).toJSON();
    expect(elem).toMatchSnapshot();
  });
});
