// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie form should render movie form w/o data with loading button 1`] = `
<form
  className="w-full"
  onSubmit={[MockFunction]}
>
  <div
    className="flex flex-wrap -mx-3 mb-4"
  >
    <div
      className="w-full sm:w-2/3 px-3 mb-6 md:mb-0"
    >
      <label
        className="block tracking-wide text-xs font-bold mb-2 upper-case text-primary"
      >
        Title
      </label>
      <input
        className="appearance-none block w-full bg-gray80 text-white border rounded py-2 h-12 px-4 mb-3 leading-tight focus:outline-none focus:border-gray-200 border-gray80"
        placeholder="Movie title"
        type="text"
      />
    </div>
    <div
      className="w-full sm:w-1/3 px-3"
    >
      <label
        className="block tracking-wide text-xs font-bold mb-2 upper-case text-primary"
      >
        Release date
      </label>
      <input
        className="appearance-none block w-full bg-gray80 text-white border rounded py-2 h-12 px-4 mb-3 leading-tight focus:outline-none focus:border-gray-200 border-gray80"
        placeholder="Select Date"
        type="date"
      />
    </div>
  </div>
  <div
    className="flex flex-wrap -mx-3 mb-4"
  >
    <div
      className="w-full sm:w-2/3 px-3 mb-6 md:mb-0"
    >
      <label
        className="block tracking-wide text-xs font-bold mb-2 upper-case text-primary"
      >
        Movie url
      </label>
      <input
        className="appearance-none block w-full bg-gray80 text-white border rounded py-2 h-12 px-4 mb-3 leading-tight focus:outline-none focus:border-gray-200 border-gray80"
        placeholder="https://"
        type="text"
      />
    </div>
    <div
      className="w-full sm:w-1/3 px-3"
    >
      <label
        className="block tracking-wide text-xs font-bold mb-2 upper-case text-primary"
      >
        Rating
      </label>
      <input
        className="appearance-none block w-full bg-gray80 text-white border rounded py-2 h-12 px-4 mb-3 leading-tight focus:outline-none focus:border-gray-200 border-gray80"
        max="10"
        min="0"
        placeholder="7.8"
        step="0.1"
        type="number"
      />
    </div>
  </div>
  <div
    className="flex flex-wrap -mx-3 mb-4"
  >
    <div
      className="w-full sm:w-2/3 px-3 mb-6 md:mb-0"
    >
      <label
        className="block uppercase tracking-wide text-primary text-xs font-bold mb-2"
      >
        Genre
      </label>
      <div
        className="relative"
      >
        <select
          className="block appearance-none w-full bg-gray80 border border-gray80 text-white h-12 py-2 px-4 pr-8 rounded leading-tight focus:outline-none focus:border-gray-200"
        >
          <option>
            All
          </option>
          <option>
            Comedy
          </option>
          <option>
            Documentary
          </option>
          <option>
            Horror
          </option>
          <option>
            Crime
          </option>
        </select>
        <div
          className="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
        >
          <svg
            className="fill-current h-3 w-3"
          >
            arrowDown.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      className="w-full sm:w-1/3 px-3 mb-6 md:mb-0"
    >
      <label
        className="block tracking-wide text-xs font-bold mb-2 upper-case text-primary"
      >
        runtime
      </label>
      <input
        className="appearance-none block w-full bg-gray80 text-white border rounded py-2 h-12 px-4 mb-3 leading-tight focus:outline-none focus:border-gray-200 border-gray80"
        min="1"
        placeholder="minutes"
        step="1"
        type="number"
      />
    </div>
  </div>
  <div
    className="flex flex-wrap -mx-3 mb-4"
  >
    <div
      className="w-full px-3 mb-6 md:mb-0"
    >
      <label
        className="block uppercase tracking-wide text-xs font-bold mb-2 upper-case text-primary"
      >
        Overview
      </label>
      <textarea
        className="appearance-none w-full bg-gray80 border-gray80 text-white border rounded py-2 px-4 mb-3 leading-tight focus:outline-none focus:border-gray-200 resize-none"
        name="overview"
        placeholder="Movie description"
        rows={6}
      />
    </div>
  </div>
  <div
    className="flex flex-row w-full"
  >
    <button
      className="flex justify-center items-center rounded border p-2 border-primary text-primary px-11 py-3 ml-auto mr-4"
      onClick={[MockFunction]}
    >
      Reset
    </button>
    <button
      className="flex justify-center items-center rounded border p-2 text-white bg-primary border-primary px-11 py-3"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`Movie form should render movie form with filled data 1`] = `
<form
  className="w-full"
  onSubmit={[MockFunction]}
>
  <div
    className="flex flex-wrap -mx-3 mb-4"
  >
    <div
      className="w-full sm:w-2/3 px-3 mb-6 md:mb-0"
    >
      <label
        className="block tracking-wide text-xs font-bold mb-2 upper-case text-primary"
      >
        Title
      </label>
      <input
        className="appearance-none block w-full bg-gray80 text-white border rounded py-2 h-12 px-4 mb-3 leading-tight focus:outline-none focus:border-gray-200 border-gray80"
        defaultValue="Kill Bill: Vol 2"
        placeholder="Movie title"
        type="text"
      />
    </div>
    <div
      className="w-full sm:w-1/3 px-3"
    >
      <label
        className="block tracking-wide text-xs font-bold mb-2 upper-case text-primary"
      >
        Release date
      </label>
      <input
        className="appearance-none block w-full bg-gray80 text-white border rounded py-2 h-12 px-4 mb-3 leading-tight focus:outline-none focus:border-gray-200 border-gray80"
        defaultValue={1994}
        placeholder="Select Date"
        type="date"
      />
    </div>
  </div>
  <div
    className="flex flex-wrap -mx-3 mb-4"
  >
    <div
      className="w-full sm:w-2/3 px-3 mb-6 md:mb-0"
    >
      <label
        className="block tracking-wide text-xs font-bold mb-2 upper-case text-primary"
      >
        Movie url
      </label>
      <input
        className="appearance-none block w-full bg-gray80 text-white border rounded py-2 h-12 px-4 mb-3 leading-tight focus:outline-none focus:border-gray-200 border-gray80"
        defaultValue="movie1.png"
        placeholder="https://"
        type="text"
      />
    </div>
    <div
      className="w-full sm:w-1/3 px-3"
    >
      <label
        className="block tracking-wide text-xs font-bold mb-2 upper-case text-primary"
      >
        Rating
      </label>
      <input
        className="appearance-none block w-full bg-gray80 text-white border rounded py-2 h-12 px-4 mb-3 leading-tight focus:outline-none focus:border-gray-200 border-gray80"
        defaultValue={7.8}
        max="10"
        min="0"
        placeholder="7.8"
        step="0.1"
        type="number"
      />
    </div>
  </div>
  <div
    className="flex flex-wrap -mx-3 mb-4"
  >
    <div
      className="w-full sm:w-2/3 px-3 mb-6 md:mb-0"
    >
      <label
        className="block uppercase tracking-wide text-primary text-xs font-bold mb-2"
      >
        Genre
      </label>
      <div
        className="relative"
      >
        <select
          className="block appearance-none w-full bg-gray80 border border-gray80 text-white h-12 py-2 px-4 pr-8 rounded leading-tight focus:outline-none focus:border-gray-200"
        >
          <option>
            All
          </option>
          <option>
            Comedy
          </option>
          <option>
            Documentary
          </option>
          <option>
            Horror
          </option>
          <option>
            Crime
          </option>
        </select>
        <div
          className="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
        >
          <svg
            className="fill-current h-3 w-3"
          >
            arrowDown.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      className="w-full sm:w-1/3 px-3 mb-6 md:mb-0"
    >
      <label
        className="block tracking-wide text-xs font-bold mb-2 upper-case text-primary"
      >
        runtime
      </label>
      <input
        className="appearance-none block w-full bg-gray80 text-white border rounded py-2 h-12 px-4 mb-3 leading-tight focus:outline-none focus:border-gray-200 border-gray80"
        defaultValue={200}
        min="1"
        placeholder="minutes"
        step="1"
        type="number"
      />
    </div>
  </div>
  <div
    className="flex flex-wrap -mx-3 mb-4"
  >
    <div
      className="w-full px-3 mb-6 md:mb-0"
    >
      <label
        className="block uppercase tracking-wide text-xs font-bold mb-2 upper-case text-primary"
      >
        Overview
      </label>
      <textarea
        className="appearance-none w-full bg-gray80 border-gray80 text-white border rounded py-2 px-4 mb-3 leading-tight focus:outline-none focus:border-gray-200 resize-none"
        defaultValue="Jules Winnfield (Samuel L. Jackson) and Vincent Vega (John Travolta) are two hit men who are out to retrieve a suitcase stolen from their employer, mob boss Marsellus Wallace (Ving Rhames). Wallace has also asked Vincent to take his wife Mia (Uma Thurman) out a few days later when Wallace himself will be out of town. Butch Coolidge (Bruce Willis) is an aging boxer who is paid by Wallace to lose his fight. The lives of these seemingly unrelated people are woven together comprising of a series of funny, bizarre and uncalled-for incidents.—Soumitra"
        name="overview"
        placeholder="Movie description"
        rows={6}
      />
    </div>
  </div>
  <div
    className="flex flex-row w-full"
  >
    <button
      className="flex justify-center items-center rounded border p-2 border-primary text-primary px-11 py-3 ml-auto mr-4"
      onClick={[MockFunction]}
    >
      Reset
    </button>
    <button
      className="flex justify-center items-center rounded border p-2 text-white bg-primary border-primary px-11 py-3"
      type="submit"
    >
      Edit
    </button>
  </div>
</form>
`;
